--- a/clothes-project/src/app/core/auth/register/register.component.scss
+++ b/clothes-project/src/app/core/auth/register/register.component.scss
@@ -1,9 +1,9 @@
 @import '../../../shared/styles/global-colors.scss';
 @import '../../../shared/styles/reusable-styles.scss';
 
-.login-component {
-  height: 90vh;
+.register-component {
   width: 100%;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,35 +13,43 @@
   background-position: center center;
   h1 {
     margin: 100px 0;
-    font-weight: 500;
-    color: black;
   }
+
   form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: fit-content;
-    width: fit-content;
     border: 1px solid $primary-color;
-    padding: 25px 25px 5px 25px;
+    padding: 20px;
     border-radius: 3px;
+    display: flex;
+    width: 250px;
+    flex-direction: column;
     background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.4) 5px 4px 20px;
-    .material-icons-outlined {
-      color: $primary-color;
-      font-size: 30px;
-      margin-bottom: 30px;
-      line-height: 0;
+    .password-group {
+      display: flex;
+      flex-direction: column;
+    }
+    .invalid-input {
+      @include warning-invalid-input-message;
+      width: 250px;
+      text-align: start;
     }
     .valid-input {
       color: $valid-color;
     }
-    span.invalid-input {
-      @include warning-invalid-input-message;
+    .text-danger {
+      color: #a02935;
+      font-size: 15px;
+      span {
+        position: relative;
+        top: 6px;
+      }
     }
-    p {
-      margin-top: 10px;
+    .text-success {
+      color: #23923d;
+      font-size: 15px;
+      span {
+        position: relative;
+        top: 6px;
+      }
     }
     button:disabled {
       cursor: not-allowed;
