--- a/clothes-project/src/app/core/auth/login/login.component.html
+++ b/clothes-project/src/app/core/auth/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="login-component">
+<div class="login-container">
   <h1>Sign in to continue</h1>
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
-    <mat-icon><span class="material-icons-outlined"> person </span></mat-icon>
+    <mat-icon><span class="person-icon"> person </span></mat-icon>
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
       <input
@@ -23,10 +23,10 @@
       <mat-icon *ngIf="email.valid" matSuffix
         ><span class="valid-input"> done </span></mat-icon
       >
+      <mat-error *ngIf="!email.valid && email.touched">
+        Please enter a valid email!
+      </mat-error>
     </mat-form-field>
-    <span class="invalid-input" *ngIf="!email.valid && email.touched"
-      >Please enter a valid email!</span
-    >
     <mat-form-field appearance="outline">
       <mat-label>Password</mat-label>
       <input
@@ -47,11 +47,17 @@
       <mat-icon *ngIf="password.valid" matSuffix
         ><span class="valid-input"> done </span></mat-icon
       >
+      <mat-error *ngIf="!password.valid && password.touched">
+        Please enter a valid password!
+      </mat-error>
     </mat-form-field>
-    <span class="invalid-input" *ngIf="!password.valid && password.touched"
-      >Please enter a valid password!</span
+    <button
+      [disabled]="!f.valid"
+      mat-raised-button
+      type="submit"
+      color="primary"
     >
-    <button [disabled]="!f.valid" mat-raised-button type="submit" color="primary">Login</button>
-    <p>Not registered yet? <a routerLink="/auth/register">Register</a></p>
+      Login
+    </button>
   </form>
 </div>
