--- a/clothes-project/src/app/core/auth/login/login.component.scss
+++ b/clothes-project/src/app/core/auth/login/login.component.scss
@@ -1,6 +1,6 @@
 @import '../../../shared/styles/global-colors.scss';
 
-.login-component {
+.login-container {
   height: 90vh;
   width: 100%;
   display: flex;
@@ -10,11 +10,13 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+
   h1 {
     margin: 100px 0;
     font-weight: 500;
     color: black;
   }
+
   form {
     display: flex;
     flex-direction: column;
@@ -23,33 +25,26 @@
     height: fit-content;
     width: fit-content;
     border: 1px solid $primary-color;
-    padding: 25px 25px 5px 25px;
+    padding: 25px 25px 5px;
     border-radius: 3px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.4) 5px 4px 20px;
-    .material-icons-outlined {
+
+    .person-icon {
       color: $primary-color;
       font-size: 30px;
       margin-bottom: 30px;
       line-height: 0;
     }
+
     .valid-input {
       color: $valid-color;
     }
-    span.invalid-input {
-      color: #721c24;
-      border: 1px solid #f8d7da;
-      background-color: #f8d7da;
-      width: 100%;
-      margin-bottom: 1.34375em;
-      padding: 10px;
-      box-sizing: border-box;
-      text-align: center;
-      border-radius: 3px;
-    }
+
     p {
       margin-top: 10px;
     }
+
     button:disabled {
       cursor: not-allowed;
     }
