--- a/clothes-project/src/app/shared/components/header/header.component.scss
+++ b/clothes-project/src/app/shared/components/header/header.component.scss
@@ -1,7 +1,7 @@
-@import '../../shared/styles/global-colors.scss';
+@import '../../styles/global-colors.scss';
 
-.header {
-  .example-spacer {
+.main-header {
+  .header-spacer {
     flex: 1 1 auto;
   }
 
@@ -25,13 +25,19 @@
     box-shadow: -1px 5px 0px -2px $primary-color;
   }
 
-  &__login-button {
+  &__account-button {
     color: red;
     background: transparent;
     color: white;
     border: none;
-    font-size: 17px;
+    .account-icon {
+      font-size: 30px;
+    }
   }
+  &__account-button:hover {
+    cursor: pointer;
+  }
+
   &__login-button:hover {
     cursor: pointer;
     text-decoration: underline;
