--- a/clothes-project/src/app/core/auth/login/login.component.scss
+++ b/clothes-project/src/app/core/auth/login/login.component.scss
@@ -1,15 +1,8 @@
 @import '../../../shared/styles/global-colors.scss';
+@import '../../../shared/styles/shared-styles.scss';
 
 .login-container {
-  height: 90vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: url('../../../../assets/images/login-background.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
+  @include auth-components-container(100%, 90vh);
 
   h1 {
     margin: 100px 0;
@@ -18,22 +11,11 @@
   }
 
   form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: fit-content;
-    width: fit-content;
-    border: 1px solid $primary-color;
-    padding: 25px 25px 5px;
-    border-radius: 3px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.4) 5px 4px 20px;
+    @include custom-form(250px, 270px, 25px 25px 5px);
 
     .person-icon {
       color: $primary-color;
-      font-size: 30px;
-      margin-bottom: 30px;
+      font-size: 40px;
       line-height: 0;
     }
 
