--- a/clothes-project/src/app/shared/components/header/header.component.html
+++ b/clothes-project/src/app/shared/components/header/header.component.html
@@ -1,9 +1,18 @@
 <header class="main-header">
   <mat-toolbar>
-    <span class="main-header__navbar-brand" routerLink="/home"><b>4</b>You</span>
+    <span class="main-header__navbar-brand" routerLink="/home"
+      ><b>4</b>You</span
+    >
     <span class="header-spacer"></span>
-    <button class="main-header__account-button" routerLink="auth/login">
+    <button
+      *ngIf="!isAuthenticated"
+      class="main-header__account-button"
+      routerLink="auth/login"
+    >
       <mat-icon class="account-icon">person</mat-icon>
+    </button>
+    <button *ngIf="isAuthenticated" class="main-header__account-button">
+      <mat-icon class="account-icon-logged-in">person</mat-icon>
     </button>
   </mat-toolbar>
 </header>
