--- a/clothes-project/src/app/shared/components/header/header.component.scss
+++ b/clothes-project/src/app/shared/components/header/header.component.scss
@@ -30,10 +30,17 @@
     background: transparent;
     color: white;
     border: none;
+
     .account-icon {
       font-size: 30px;
     }
+
+    .account-icon-logged-in {
+      font-size: 30px;
+      color: $valid-color;
+    }
   }
+
   &__account-button:hover {
     cursor: pointer;
   }
