--- a/clothes-project/src/app/app.component.html
+++ b/clothes-project/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<mat-drawer-container autosize>
+  <mat-drawer #drawer mode="over" position="end">
+    <button mat-stroked-button color="primary" (click)="logout(drawer)">Logout</button>
+  </mat-drawer>
+  <app-header [matDrawerRef]="drawer"></app-header>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
+</mat-drawer-container>
