--- a/clothes-project/src/app/shared/components/header/header.component.html
+++ b/clothes-project/src/app/shared/components/header/header.component.html
@@ -11,7 +11,7 @@
     >
       <mat-icon class="account-icon">person</mat-icon>
     </button>
-    <button *ngIf="isAuthenticated" class="main-header__account-button">
+    <button *ngIf="isAuthenticated" (click)="onToggleSidebar()" class="main-header__account-button">
       <mat-icon class="account-icon-logged-in">person</mat-icon>
     </button>
   </mat-toolbar>
