--- a/clothes-project/src/app/shared/components/header/header.component.html
+++ b/clothes-project/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="main-header">
   <mat-toolbar>
     <span class="main-header__navbar-brand" routerLink="/home"
-      ><b>4</b>You</span
+      ><b>4</b>IT</span
     >
     <span class="header-spacer"></span>
     <button
