--- a/clothes-project/src/app/app.component.html
+++ b/clothes-project/src/app/app.component.html
@@ -1,6 +1,8 @@
 <mat-drawer-container autosize>
   <mat-drawer #drawer mode="over" position="end">
-    <button mat-stroked-button color="primary" (click)="logout(drawer)">Logout</button>
+    <div class="sidenav-container">
+      <button mat-stroked-button color="primary" (click)="logout(drawer)">Logout</button>
+    </div>
   </mat-drawer>
   <app-header [matDrawerRef]="drawer"></app-header>
   <router-outlet></router-outlet>
