--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list.component.html
@@ -1,7 +1,18 @@
 <div class="home-list-container">
-  <app-home-phone-item
-    *ngFor="let phone of mobilePhones; let i = index"
-    [phone]="phone"
+  <h1 class="align-item-start">Mobile Phones</h1>
+  <div class="phone-articles">
+    <app-home-phone-item
+      *ngFor="let phone of mobilePhones; let i = index"
+      [phone]="phone"
+      [index]="i"
+    ></app-home-phone-item>
+  </div>
+  <h1 class="align-item-start">Laptops</h1>
+  <div class="laptop-articles">
+    <app-home-laptop-item
+    *ngFor="let laptop of laptops; let i = index"
+    [laptop]="laptop"
     [index]="i"
-  ></app-home-phone-item>
+    ></app-home-laptop-item>
+  </div>
 </div>
