--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list.component.scss
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list.component.scss
@@ -1,5 +1,18 @@
 .home-list-container {
-    display: flex;
-    justify-content: center;
-    user-select: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 60px;
+
+  .align-item-start {
+    align-self: flex-start;
+  }
+
+  .phone-articles, .laptop-articles {
+    display: grid;
+    width: 100%;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    justify-items: center;
+  }
 }
