--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list.component.html
@@ -1,18 +1,19 @@
 <div class="home-list-container">
   <h1 class="align-item-start">Mobile Phones</h1>
   <div class="phone-articles">
-    <app-home-phone-item
-      *ngFor="let phone of mobilePhones; let i = index"
-      [phone]="phone"
+    <app-home-list-item
+      *ngFor="let phone of homeList.mobilePhones; let i = index"
+      [item]="phone"
       [index]="i"
-    ></app-home-phone-item>
+    ></app-home-list-item>
   </div>
   <h1 class="align-item-start">Laptops</h1>
-  <div class="laptop-articles">
-    <app-home-laptop-item
-    *ngFor="let laptop of laptops; let i = index"
-    [laptop]="laptop"
-    [index]="i"
-    ></app-home-laptop-item>
+  <div class="phone-articles">
+    <app-home-list-item
+      *ngFor="let laptop of homeList.laptops; let i = index"
+      [item]="laptop"
+      [index]="i"
+    >
+    </app-home-list-item>
   </div>
 </div>
