--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item.component.html
@@ -1,4 +1,4 @@
-<a class="home-item">
+<a class="home-item" (click)=showDetails()>
   <mat-card class="home-item__phone-product">
     <img
       class="home-item__phone-image"
