--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item.component.scss
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item.component.scss
@@ -20,4 +20,11 @@
         font-size: 25px;
     }
   }
+  mat-card:hover {
+    box-shadow: 1px 2px 5px 2px rgba(0, 0, 0, 0.4) !important;
+  }
+}
+
+.home-item:hover {
+  cursor: pointer;
 }
