--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
@@ -1,1 +1,7 @@
-<p>home-list-item-details works!</p>
+<div class="home-item-details-container">
+  <mat-progress-spinner
+  [color]="'primary'" [mode]="'indeterminate'" *ngIf="!item; else content"></mat-progress-spinner>
+  <ng-template #content>
+    <img [src]="item.imgURL">
+  </ng-template>
+</div>
