--- a/clothes-project/src/app/app.component.scss
+++ b/clothes-project/src/app/app.component.scss
@@ -1,7 +1,11 @@
-.sidenav-container {
-  width: 200px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 20px;
+.mat-drawer-container {
+  background-color: white !important;
+  .sidenav-container {
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px;
+  }
+
 }
