--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list.component.html
@@ -2,14 +2,14 @@
   <h1 class="align-item-start">Mobile Phones</h1>
   <div class="phone-articles">
     <app-home-list-item
-      *ngFor="let phone of homeList.mobilePhones; let i = index"
+      *ngFor="let phone of (homeList | async).mobilePhones; let i = index"
       [item]="phone"
     ></app-home-list-item>
   </div>
   <h1 class="align-item-start">Laptops</h1>
   <div class="phone-articles">
     <app-home-list-item
-      *ngFor="let laptop of homeList.laptops; let i = index"
+      *ngFor="let laptop of (homeList | async).laptops; let i = index"
       [item]="laptop"
     >
     </app-home-list-item>
