--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
@@ -6,28 +6,62 @@
     top: 40%;
     left: 45%;
   }
-  .item-colors {
+  .general-presentation {
     display: flex;
-    .item-color {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 5px 10px;
-      border-radius: 3px;
-      border: 1px solid black;
-      padding: 5px;
-      flex-direction: column;
-      img {
-        width: 40px;
-        height: 40px;
-        display: inline-block;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 30px;
+    &__item-images {
+      .item-colors {
+        display: flex;
+        justify-content: center;
+
+        .item-color {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin: 5px 10px;
+          border-radius: 3px;
+          border: 1px solid black;
+          padding: 5px;
+          flex-direction: column;
+
+          img {
+            width: 40px;
+            height: 40px;
+            display: inline-block;
+          }
+        }
+
+        .item-color:hover {
+          cursor: pointer;
+        }
+
+        .custom-border {
+          border: 1px solid $custom-border;
+        }
+      }
+      p {
+        margin: 0 auto;
+        width: fit-content;
+        font-weight: 500;
       }
     }
-    .item-color:hover {
-      cursor: pointer;
-    }
-    .custom-border {
-      border: 1px solid $custom-border;
+    &__item-details {
+      z-index: 2;
+      .stars {
+        margin: auto;
+
+        p {
+          display: inline;
+          margin: 0;
+          font-weight: 500;
+        }
+
+        span {
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
