--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item.component.html
@@ -8,7 +8,7 @@
     <mat-card-header>
       <mat-card-title
         ><p class="home-item__phone-title">
-          {{ getTitle() }}
+          {{ title | async}}
         </p></mat-card-title
       >
     </mat-card-header>
