--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
@@ -11,6 +11,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 30px;
+    user-select: none;
     &__item-images {
       .item-colors {
         display: flex;
@@ -22,7 +23,7 @@
           align-items: center;
           margin: 5px 10px;
           border-radius: 3px;
-          border: 1px solid black;
+          border: 1px solid #6c757d;
           padding: 5px;
           flex-direction: column;
 
@@ -60,6 +61,28 @@
 
         span {
           text-decoration: underline;
+        }
+      }
+      .benefits {
+        background-color: #6c757d;
+        color: white;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 2px 2px 10px -1px #1f1f1f;
+        margin: 10px 0;
+
+        h4 {
+          font-weight: 300;
+          text-transform: uppercase;
+          margin: 5px 0;
+        }
+
+        p {
+          position: relative;
+          span {
+            position: absolute;
+            top: 7px;
+          }
         }
       }
     }
