--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-memory/select-item-memory.component.scss
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-memory/select-item-memory.component.scss
@@ -9,7 +9,7 @@
   flex-wrap: wrap;
 
   .memory-option {
-    border: 2px solid black;
+    border: 2px solid #6c757d;
     border-radius: 2px;
     width: 50px;
     text-align: center;
