--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-memory/select-item-memory.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-memory/select-item-memory.component.html
@@ -11,7 +11,7 @@
 <p class="memory-text">Choose internal storage</p>
 <div class="memory" [appSetBorderOnClick]="phoneMemory.storage.itemIdx">
   <div
-    class="memory-option"
+    class="storage-option"
     *ngFor="let gb of phoneMemory.storage.storageOptions; let i = index"
     (click)="onChangeStorage(i)"
   >
