--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-memory/select-item-memory.component.scss
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-memory/select-item-memory.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../../../../../shared/styles/global-colors.scss';
+@import '../../../../../../../../shared/styles/shared-styles.scss';
 .memory-text {
   font-weight: 500;
   margin: 10px 0;
@@ -9,15 +10,15 @@
   flex-wrap: wrap;
 
   .memory-option {
-    border: 2px solid #6c757d;
-    border-radius: 2px;
-    width: 50px;
-    text-align: center;
-    padding: 5px;
-    margin: 10px 10px 10px 0px;
-    span {
-      color: blak;
-    }
+    @include storage-and-memory-buttons;
+  }
+
+  .storage-option {
+    @include storage-and-memory-buttons;
+  }
+
+  .storage-option:hover {
+    cursor: pointer;
   }
 
   .memory-option:hover {
