--- a/clothes-project/src/app/shared/styles/shared-styles.scss
+++ b/clothes-project/src/app/shared/styles/shared-styles.scss
@@ -2,17 +2,17 @@
 
 @mixin custom-form($width, $height, $padding) {
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    width: $width;
-    height: $height;
-    border: 1px solid $primary-color;
-    padding: $padding;
-    border-radius: 3px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.4) 5px 4px 20px;
-};
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: $width;
+  height: $height;
+  border: 1px solid $primary-color;
+  padding: $padding;
+  border-radius: 3px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.4) 5px 4px 20px;
+}
 
 @mixin auth-components-container($width, $height) {
   width: $width;
@@ -24,4 +24,16 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+}
+
+@mixin storage-and-memory-buttons {
+  border: 2px solid #6c757d;
+  border-radius: 2px;
+  width: 50px;
+  text-align: center;
+  padding: 5px;
+  margin: 10px 10px 10px 0px;
+  span {
+    color: black;
+  }
 }
