--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
@@ -19,6 +19,7 @@
             class="item-color"
             (click)="onChangeColor(color.key, i)"
             *ngFor="let color of item.specs.colors | keyvalue; let i = index"
+            [ngClass]="{ 'custom-border': i === 0 }"
           >
             <img src="{{ color.value }}" alt="" />
             <span>{{ color.key }}</span>
