--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/item-presentation/item-presentation.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/item-presentation/item-presentation.component.html
@@ -8,6 +8,7 @@
           let image of images[colorSelected.colorName];
           let i = index
         "
+        [ngClass]="{ 'custom-border': i === 0 }"
       >
         <img src="{{ image }}" (click)="changeImage(i)" />
       </div>
