--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-memory/select-item-memory.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-memory/select-item-memory.component.html
@@ -4,6 +4,7 @@
     class="memory-option"
     *ngFor="let ram of phoneMemory.ram.ramOptions; let i = index"
     (click)="onChangeRAM(i)"
+    [ngClass]="{ 'custom-border': i === 0 }"
   >
     <span>{{ ram }} GB</span>
   </div>
@@ -14,6 +15,7 @@
     class="storage-option"
     *ngFor="let gb of phoneMemory.storage.storageOptions; let i = index"
     (click)="onChangeStorage(i)"
+    [ngClass]="{ 'custom-border': i === 0 }"
   >
     <span>{{ gb }} GB</span>
   </div>
