--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
@@ -55,5 +55,10 @@
         </div>
       </div>
     </section>
+    <div class="spect-table">
+      <app-phone-specs-table
+        *ngIf="this.item.type === 'mobilePhones'"
+      ></app-phone-specs-table>
+    </div>
   </ng-template>
 </div>
