--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
@@ -59,6 +59,9 @@
       <app-phone-specs-table
         *ngIf="this.item.type === 'mobilePhones'"
       ></app-phone-specs-table>
+      <app-laptop-specs-table
+        *ngIf="this.item.type === 'laptops'"
+      ></app-laptop-specs-table>
     </div>
   </ng-template>
 </div>
