--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
@@ -6,12 +6,27 @@
     top: 40%;
     left: 45%;
   }
+
+  .stars {
+    align-self: flex-start;
+    p {
+      display: inline;
+      margin: 0;
+      font-weight: 500;
+    }
+
+    span {
+      text-decoration: underline;
+    }
+  }
+
   .general-presentation {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 30px;
     user-select: none;
+
     &__item-images {
       .item-colors {
         display: flex;
@@ -49,39 +64,40 @@
       }
     }
     &__item-details {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       z-index: 2;
-      .stars {
-        margin: auto;
-
-        p {
-          display: inline;
-          margin: 0;
-          font-weight: 500;
-        }
-
-        span {
-          text-decoration: underline;
-        }
+      .add-to-cart-component {
+        margin-bottom: 20px;
+        margin-top: 50px;
       }
-      .benefits {
-        background-color: #6c757d;
-        color: white;
-        padding: 10px;
-        border-radius: 5px;
-        box-shadow: 2px 2px 10px -1px #1f1f1f;
-        margin: 10px 0;
 
-        h4 {
-          font-weight: 300;
-          text-transform: uppercase;
-          margin: 5px 0;
-        }
+      .item-memory-container {
+        display: flex;
 
-        p {
-          position: relative;
-          span {
-            position: absolute;
-            top: 7px;
+        .benefits {
+          background-color: #6c757d;
+          color: white;
+          padding: 10px;
+          height: 200px;
+          width: 250px;
+          border-radius: 5px;
+          box-shadow: 2px 2px 10px -1px #1f1f1f;
+          margin: 10px 0;
+
+          h4 {
+            font-weight: 300;
+            text-transform: uppercase;
+            margin: 5px 0;
+          }
+
+          p {
+            position: relative;
+            span {
+              position: absolute;
+              top: 7px;
+            }
           }
         }
       }
