--- a/clothes-project/src/app/shared/components/header/header.component.html
+++ b/clothes-project/src/app/shared/components/header/header.component.html
@@ -1,9 +1,11 @@
 <header class="main-header">
   <mat-toolbar>
-    <span class="main-header__navbar-brand" routerLink="/home"
-      ><b>4</b>IT</span
-    >
+    <span class="main-header__navbar-brand" routerLink="/home"><b>4</b>IT</span>
     <span class="header-spacer"></span>
+    <button class="main-header__cart-button" routerLink="cart">
+      <mat-icon>shopping_cart </mat-icon>
+      <span class="itemsInCart">{{ numberOfItemsInCart }}</span>
+    </button>
     <button
       *ngIf="!isAuthenticated"
       class="main-header__account-button"
@@ -11,7 +13,11 @@
     >
       <mat-icon class="account-icon">person</mat-icon>
     </button>
-    <button *ngIf="isAuthenticated" (click)="onToggleSidebar()" class="main-header__account-button">
+    <button
+      *ngIf="isAuthenticated"
+      (click)="onToggleSidebar()"
+      class="main-header__account-button"
+    >
       <mat-icon class="account-icon-logged-in">person</mat-icon>
     </button>
   </mat-toolbar>
