--- a/clothes-project/src/app/shared/components/cart/cart.component.html
+++ b/clothes-project/src/app/shared/components/cart/cart.component.html
@@ -1,4 +1,7 @@
-<h1 *ngIf="!carItems; else content">Your cart is empty!</h1>
-<ng-template #content>
-  <h1>Yes</h1>
-</ng-template>
+<div class="cart-container">
+  <h1 class="cart-empty" *ngIf="!cartItems; else content">Your cart is empty!</h1>
+  <ng-template #content>
+    <h1>Your Cart</h1>
+    <app-cart-table [dataSource]="tableData"></app-cart-table>
+  </ng-template>
+</div>
