cart-button-animation

--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
@@ -26,7 +26,7 @@
             *ngFor="let color of item.specs.colors | keyvalue; let i = index"
             [ngClass]="{ 'custom-border': i === 0 }"
           >
-            <img src="{{ color.value }}" alt="" />
+            <img src="{{ color.value }}" alt="{{ color.key }}" />
             <span>{{ color.key }}</span>
           </div>
         </div>
