--- a/clothes-project/src/app/shared/components/add-to-cart-button/add-to-cart.component.scss
+++ b/clothes-project/src/app/shared/components/add-to-cart-button/add-to-cart.component.scss
@@ -36,3 +36,11 @@
 .add-to-cart-button:hover {
   opacity: 0.7;
 }
+
+.changed-background {
+  background-color: #28a745;
+}
+
+.changed-background:hover {
+  opacity: 1;
+}
