--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-properties/select-item-properties.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-properties/select-item-properties.component.html
@@ -1,3 +1,17 @@
+aaaaa
+<div class="item-colors" [appSetBorderOnClick]="colorsAvailableIndex">
+  <div
+    class="item-color"
+    (click)="onChangeColor(color.key, i)"
+    *ngFor="let color of item.specs.colors | keyvalue; let i = index"
+    [ngClass]="{ 'custom-border': i === 0 }"
+  >
+    <img src="{{ color.value }}" alt="{{ color.key }}" />
+    <span>{{ color.key }}</span>
+  </div>
+</div>
+bbbbb
+
 <p class="memory-text" *ngIf="phoneMemory.ram.ramOptions">Choose Memory RAM</p>
 <div class="memory" [appSetBorderOnClick]="phoneMemory.ram.itemIdx">
   <div
