--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
@@ -5,4 +5,17 @@
     top: 40%;
     left: 45%;
   }
+
+  .stars {
+    align-self: flex-start;
+    p {
+      display: inline;
+      margin: 0;
+      font-weight: 500;
+    }
+
+    span {
+      text-decoration: underline;
+    }
+  }
 }
