--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
@@ -1,3 +1,4 @@
+@import '../../../../../../../shared//styles/global-colors.scss';
 .home-item-details-container {
   min-height: 90vh;
   mat-progress-spinner {
@@ -17,5 +18,22 @@
     span {
       text-decoration: underline;
     }
+  }
+
+  .general-presentation {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 30px;
+    user-select: none;
+
+    &__item-properties {
+      p {
+        margin: 0 auto;
+        width: fit-content;
+        font-weight: 500;
+      }
+    }
+
   }
 }
